Update SessionAuthenticationFilter.java